--- a/package.json
+++ b/package.json
@@ -4,19 +4,18 @@
   "description": "Yet Another Secure Messaging App",
   "author": "devgianlu",
   "scripts": {
-    "build": "webpack --mode=production",
-    "watch": "webpack --watch --mode=development",
-    "serve": "serve dist"
+    "build": "webpack --mode production",
+    "serve": "webpack serve --mode development"
   },
   "dependencies": {
     "bootstrap": "^5.2.3",
+    "peerjs": "^1.4.7",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.6.2",
     "react-router-dom": "^6.6.2",
-    "react-scripts": "^5.0.1",
-    "workbox-strategies": "^6.5.4"
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
@@ -31,7 +30,7 @@
     "typescript": "^4.9.4",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
-    "workbox-webpack-plugin": "^6.5.4"
+    "webpack-dev-server": "^4.11.1"
   },
   "eslintConfig": {
     "extends": [
