--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
     "outDir": "./dist/",
-    "lib": ["es2021", "dom", "webworker"],
+    "lib": ["es2021", "dom"],
     "noImplicitAny": true,
-    "module": "commonjs",
+    "module": "es2022",
     "target": "es2022",
     "jsx": "react",
     "allowJs": true,
