--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.2.3",
+    "moment": "^2.29.4",
     "peerjs": "^1.4.7",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
