--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "react-dom": "^18.2.0",
     "react-router": "^6.6.2",
     "react-router-dom": "^6.6.2",
-    "react-scripts": "^5.0.1",
-    "use-reducer-async": "^2.1.1"
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
