--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,7 @@
 {
   "env": {
     "browser": true,
-    "es2022": true,
-    "node": true
+    "es2022": true
   },
   "parser": "@typescript-eslint/parser",
   "plugins": [
